Fix z-index issue in dropdown items in docs

--- a/docs/src/scss/ds.scss
+++ b/docs/src/scss/ds.scss
@@ -198,10 +198,10 @@ h6 {
 
 .ds-dropdown {
   position: relative;
+  z-index: 4;
 
   &__items {
     position: absolute;
-    z-index: 2;
   }
 
 }
